# fancy-cli

./: .gitignore  LICENSE  MANIFEST.in  README.md  dev_install.sh  example.icns  fancy-exe  fancy-runner-mac.spec  fancy-runner.py  fancy-runner.spec  fancy.py  fancy.spec  icon.icns  install.sh  installer.sh  pyproject.toml  readme.md  setup.py  tkfancy-dev.py  tkfancy.py  uninstaller.cmd
.github/workflows/: python-publish.yml
docs/: index.md
fancy/: __init__.py  api.py  click_version.py  gui.py  icon.icns  installer.sh  test.py  typer_ver.py
fancy.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fancy/assets/icon_colors/: green.icns  indigo.icns  pink.icns  red.icns  violet.icns
fancy/gui/: __init__.py  folder_color.py  folder_path.py  icon_path.py  icon_size.py
fancy/icon_colors/: yellow.icns
fancy/rainbow/: blue.icns  orange.icns
images/: example.icns
install/: installer.sh  uninstaller.sh
scripts/: fancy-runner.py
src/: __init__.py  installer.sh
src/fancy_cli/: api.py  cli.py
src/fancy_cli/assets/icon_colors/: default.icns  windows.icns
src/folders/: win10.icns
tkfancy/: __init__.py  _testing-area.py  input.py
tkfancy/gui/: folder_color.py  folder_path.py  icon_path.py  icon_size.py
